--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,14 @@
 .main {
+  background-color: rgb(250, 247, 243);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  gap: 10px;
   padding: 6rem;
   min-height: 100vh;
+  color: #2b2d42;
+  font-size: 32px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .description {
@@ -17,6 +21,7 @@
   z-index: 2;
   font-family: var(--font-mono);
 }
+
 
 .description a {
   display: flex;
